<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#07477A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExamenDeAdmision"
        android:textColor="#FFC107"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="27dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="205dp"
        android:text="¿Por qué medio se entero de la convocatoria?"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/nombre_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFCFC"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/fecha_nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:textColor="#FFFCFC"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/clave"
        app:layout_constraintStart_toStartOf="@+id/clave"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/ApellidosNombres"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/CorreoElectronico"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Fecha de Nacimiento:"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Carrera:"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/Clave"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#FFFCFC"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/nombre_apellido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nombre_apellido"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFCFC"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/correo"
        app:layout_constraintStart_toStartOf="@+id/correo"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <RadioGroup
        android:layout_width="179dp"
        android:layout_height="194dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IngenieriaSistemas"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IngenieriaAmbiental"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IngenieríaMecánica"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Administración"
            android:textColor="@color/white" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginTop="2dp"
        android:text="@string/publicidad"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="@+id/checkBox3"
        app:layout_constraintStart_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="10dp"
        android:text="@string/radio"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:text="@string/amigo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="107dp"
        android:layout_height="42dp"
        android:layout_marginTop="2dp"
        android:text="@string/internet"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FF9800"
        android:drawableLeft="@drawable/baseline_login_24"
        android:text="@string/enviar"
        app:layout_constraintEnd_toEndOf="@+id/checkBox4"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="41dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/correr" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="28dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/correo"
        app:layout_constraintStart_toEndOf="@+id/correo"
        app:layout_constraintTop_toTopOf="@+id/correo"
        app:srcCompat="@drawable/sobre" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/clave"
        app:layout_constraintStart_toEndOf="@+id/clave"
        app:layout_constraintTop_toTopOf="@+id/clave"
        app:srcCompat="@drawable/llave" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="27dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/fecha_nacimiento"
        app:layout_constraintStart_toEndOf="@+id/fecha_nacimiento"
        app:layout_constraintTop_toTopOf="@+id/fecha_nacimiento"
        app:srcCompat="@drawable/calendario" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="33dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="@+id/nombre_apellido"
        app:layout_constraintStart_toEndOf="@+id/nombre_apellido"
        app:layout_constraintTop_toTopOf="@+id/nombre_apellido"
        app:layout_constraintVertical_bias="0.071"
        app:srcCompat="@drawable/base_de_datos" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="40dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/mensajes" />

</androidx.constraintlayout.widget.ConstraintLayout>